# velowm

./: Cargo.toml  documentation.md  readme.md
src/: config.rs  cursor.rs  layout.rs  lib.rs  main.rs  wm.rs  x.rs
src/config/: appearance.rs  command.rs  keybind.rs  loader.rs
src/core/: window.rs  wm.rs  workspace.rs
src/input/: event.rs  keyboard.rs  mouse.rs
src/ui/: appearance.rs  bar.rs  cursor.rs  layout.rs  notification.rs
src/utils/: command.rs  keybind.rs  x11.rs
src/velowm_core/: window.rs  wm.rs  workspace.rs
