[package]
name = "velowm"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "adamperkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "Simple window manager for X11, written in Rust."
repository = "https://github.com/velowm/velowm.git"
readme = "readme.md"
keywords = [
    "window manager",
    "x11",
    "rust",
]
edition = "2021"

[dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xinerama"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
chrono = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
